chore: seperate models from jupyter notebook

--- a/GAN/gan.ipynb
+++ b/GAN/gan.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1. Load data"
+    "# Load data"
    ]
   },
   {
@@ -38,62 +38,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2. Define models"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch.nn as nn\n",
-    "\n",
-    "latent_dim = 100\n",
-    "g_hidden_layers = [256, 512]\n",
-    "image_dim = 28 * 28\n",
-    "d_hidden_layers = [512, 256]\n",
-    "\n",
-    "\n",
-    "class Generator(nn.Module):\n",
-    "    def __init__(self):\n",
-    "        super(Generator, self).__init__()\n",
-    "        \n",
-    "        self.model = nn.Sequential(\n",
-    "            nn.Linear(latent_dim, g_hidden_layers[0]),\n",
-    "            nn.ReLU(),\n",
-    "            nn.Linear(g_hidden_layers[0], g_hidden_layers[1]),\n",
-    "            nn.ReLU(),\n",
-    "            nn.Linear(g_hidden_layers[1], image_dim),\n",
-    "            nn.Tanh()\n",
-    "        )\n",
-    "        \n",
-    "    def forward(self, z):\n",
-    "        return self.model(z)\n",
-    "    \n",
-    "\n",
-    "class Discriminator(nn.Module):\n",
-    "    def __init__(self):\n",
-    "        super(Discriminator, self).__init__()\n",
-    "\n",
-    "        self.model = nn.Sequential(\n",
-    "            nn.Linear(image_dim, d_hidden_layers[0]),\n",
-    "            nn.LeakyReLU(0.2),\n",
-    "            nn.Linear(d_hidden_layers[0], d_hidden_layers[1]),\n",
-    "            nn.LeakyReLU(0.2),\n",
-    "            nn.Linear(d_hidden_layers[1], 1),\n",
-    "            nn.Sigmoid()\n",
-    "        )\n",
-    "        \n",
-    "    def forward(self, img):\n",
-    "        return self.model(img)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 3. Model training"
+    "# Model training"
    ]
   },
   {
@@ -104,6 +49,9 @@
    },
    "outputs": [],
    "source": [
+    "from models import Generator\n",
+    "from models import Discriminator\n",
+    "import torch.nn as nn\n",
     "import torch.optim as optim\n",
     "import numpy as np\n",
     "import os\n",
@@ -113,7 +61,10 @@
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
     "epochs = 201\n",
     "lr = 0.0002\n",
-    "\n",
+    "latent_dim = 100\n",
+    "image_dim = 28 * 28\n",
+    "g_layers = [256, 512]\n",
+    "d_layers = [512, 256]\n",
     "\n",
     "G = Generator().to(device)\n",
     "D = Discriminator().to(device)\n",
@@ -175,7 +126,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 4. Plot result"
+    "# Plot result"
    ]
   },
   {
@@ -259,6 +210,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.9"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
