--- a/GAN/gan.ipynb
+++ b/GAN/gan.ipynb
@@ -66,8 +66,8 @@
     "g_layers = [256, 512]\n",
     "d_layers = [512, 256]\n",
     "\n",
-    "G = Generator().to(device)\n",
-    "D = Discriminator().to(device)\n",
+    "G = Generator(latent_dim, g_layers, image_dim).to(device)\n",
+    "D = Discriminator(image_dim, d_layers).to(device)\n",
     "\n",
     "criterion = nn.BCELoss()\n",
     "g_optimizer = optim.Adam(G.parameters(), lr=lr)\n",
