--- a/manifold-mixup/manifold-mixup.ipynb
+++ b/manifold-mixup/manifold-mixup.ipynb
@@ -4,107 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Define Resnet model for CIFAR-10"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Referenced: https://github.com/pytorch/vision/blob/master/torchvision/models/resnet.py\n",
-    "\n",
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "import torch.nn.init as init\n",
-    "import torch.nn.functional as F\n",
-    "\n",
-    "\n",
-    "def init_weights(m):\n",
-    "    if isinstance(m, nn.Conv2d) or isinstance(m, nn.Linear):\n",
-    "        init.kaiming_normal_(m.weight)\n",
-    "        \n",
-    "\n",
-    "class IdentityMapping(nn.Module):\n",
-    "    def __init__(self, in_channels, out_channels):\n",
-    "        super(IdentityMapping, self).__init__()\n",
-    "        self.in_channels = in_channels\n",
-    "        self.out_channels = out_channels\n",
-    "        \n",
-    "    def forward(self, x):\n",
-    "        out = x\n",
-    "        # option A from https://arxiv.org/pdf/1512.03385.pdf\n",
-    "        if self.in_channels != self.out_channels:\n",
-    "            num_of_pad = self.out_channels - self.in_channels\n",
-    "            out = F.pad(out[:, :, ::2, ::2], (0, 0, 0, 0, num_of_pad//2, num_of_pad//2))\n",
-    "            \n",
-    "        return out\n",
-    "\n",
-    "\n",
-    "class ResidualBlock(nn.Module):\n",
-    "    def __init__(self, in_channels, out_channels, stride=1):\n",
-    "        super(ResidualBlock, self).__init__()\n",
-    "        self.conv1 = nn.Conv2d(in_channels, out_channels, kernel_size=3, stride=stride, padding=1, bias=False)\n",
-    "        self.bn1 = nn.BatchNorm2d(out_channels)\n",
-    "        self.relu = nn.ReLU(inplace=True)\n",
-    "        self.conv2 = nn.Conv2d(out_channels, out_channels, kernel_size=3, stride=1, padding=1, bias=False)\n",
-    "        self.bn2 = nn.BatchNorm2d(out_channels)\n",
-    "        self.downsample = IdentityMapping(in_channels, out_channels)\n",
-    "        \n",
-    "    def forward(self, x):\n",
-    "        out = self.conv1(x)\n",
-    "        out = self.bn1(out)\n",
-    "        out = self.relu(out)\n",
-    "        out = self.conv2(out)\n",
-    "        out = self.bn2(out)\n",
-    "        out += self.downsample(x)\n",
-    "        out = self.relu(out)\n",
-    "        \n",
-    "        return out\n",
-    "\n",
-    "    \n",
-    "class Resnet(nn.Module):\n",
-    "    def __init__(self, layers, num_classes=10):\n",
-    "        super(Resnet, self).__init__()\n",
-    "        self.conv = nn.Conv2d(3, 16, kernel_size=3, stride=1, padding=1, bias=False)\n",
-    "        self.bn = nn.BatchNorm2d(16)\n",
-    "        self.relu = nn.ReLU(inplace=True)\n",
-    "        self.layers1 = self._make_layer(layers[0], 16, 16, stride=1)\n",
-    "        self.layers2 = self._make_layer(layers[1], 16, 32, stride=2)\n",
-    "        self.layers3 = self._make_layer(layers[2], 32, 64, stride=2)\n",
-    "        self.avg_pool = nn.AvgPool2d(8)\n",
-    "        self.fc = nn.Linear(64, num_classes)\n",
-    "        \n",
-    "        # weight initialization\n",
-    "        self.apply(init_weights)\n",
-    "        \n",
-    "    def _make_layer(self, num_of_blocks, in_channels, out_channels, stride=1):\n",
-    "        layers = []\n",
-    "        layers.append(ResidualBlock(in_channels, out_channels, stride=stride))\n",
-    "        for i in range(num_of_blocks - 1):\n",
-    "            layers.append(ResidualBlock(out_channels, out_channels))\n",
-    "            \n",
-    "        return nn.Sequential(*layers)\n",
-    "    \n",
-    "    def forward(self, x):\n",
-    "        out = self.conv(x)\n",
-    "        out = self.bn(out)\n",
-    "        out = self.relu(out)\n",
-    "        out = self.layers1(out)\n",
-    "        out = self.layers2(out)\n",
-    "        out = self.layers3(out)\n",
-    "        out = self.avg_pool(out)\n",
-    "        out = out.view(x.size(0), -1)\n",
-    "        out = self.fc(out)\n",
-    "        \n",
-    "        return out"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Load the CIFAR-10"
    ]
   },
@@ -124,6 +23,10 @@
     }
    ],
    "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.init as init\n",
+    "import torch.nn.functional as F\n",
     "import torchvision\n",
     "import torchvision.transforms as transforms\n",
     "\n",
@@ -165,10 +68,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "import torch.optim as optim\n",
-    "\n",
-    "\n",
     "def train(train_loader, model, criterion, optimizer):\n",
     "    model.train()\n",
     "    \n",
@@ -236,7 +135,10 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -1231,7 +1133,10 @@
     }
    ],
    "source": [
+    "import os\n",
+    "import torch.optim as optim\n",
     "import numpy as np\n",
+    "from models import Resnet\n",
     "\n",
     "os.environ[\"CUDA_DEVICE_ORDER\"] = 'PCI_BUS_ID'\n",
     "os.environ[\"CUDA_VISIBLE_DEVICES\"] = '2,3'\n",
@@ -1279,25 +1184,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# save model\n",
-    "import time\n",
-    "\n",
-    "torch.save(resnet.state_dict(), f'./model/{time.strftime(\"%m%d_%H%M%S\")}-56.h')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Plot results"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
@@ -1315,14 +1201,10 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
+    "# save model\n",
+    "import time\n",
     "\n",
-    "plt.figure(figsize=(16, 6))\n",
-    "plt.title('Loss graph')\n",
-    "plt.plot(history['train_loss'], 'r-')\n",
-    "plt.plot(history['valid_loss'], 'b--')\n",
-    "plt.legend(['Train loss', 'Validation loss'], fontsize='x-large')\n",
-    "plt.show()"
+    "torch.save(resnet.state_dict(), f'./model/{time.strftime(\"%m%d_%H%M%S\")}-56.h')"
    ]
   },
   {
@@ -1397,6 +1279,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.9"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
